--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="middle-container">
-    <div class="profile">
+    <div class="card">
       <img class="profile-img" src="images/Aditya.png" alt="Aditya-profile-pic">
       <h2>Hello.</h2>
       <p class="intro">I'm a bigginer Web Designer/Developer, C and C++ Developer and a SAMP Developer<br>
