--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </div>
 
   <div class="middle-container">
-    <div class="card1">
-      <img class="card" src="images/Aditya.png" alt="Aditya-profile-pic">
+    <div class="profile">
+      <img class="profile-img" src="images/Aditya.png" alt="Aditya-profile-pic">
       <h2>Hello.</h2>
       <p class="intro">I'm a bigginer Web Designer/Developer, C and C++ Developer and a SAMP Developer<br>
         Based in India.<br>
